WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68745
WebKit does not expose AXPlaceholder value on password fields
https://bugs.webkit.org/show_bug.cgi?id=68745
Summary
WebKit does not expose AXPlaceholder value on password fields
chris fleizach
Reported
2011-09-23 16:29:11 PDT
WebKit does not expose AXPlaceholder value on password fields
Attachments
patch
(3.59 KB, patch)
2011-09-23 17:17 PDT
,
chris fleizach
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-09-23 16:29:32 PDT
rdar://10178628
chris fleizach
Comment 2
2011-09-23 17:17:09 PDT
Created
attachment 108563
[details]
patch
chris fleizach
Comment 3
2011-09-24 00:00:26 PDT
http://trac.webkit.org/changeset/95906
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug