WebKit does not expose AXPlaceholder value on password fields https://bugs.webkit.org/show_bug.cgi?id=68745

Reviewed by Oliver Hunt.

Source/WebCore: 

* accessibility/mac/WebAccessibilityObjectWrapper.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeNames]):

LayoutTests: 

* accessibility/placeholder-expected.txt:
* accessibility/placeholder.html:



git-svn-id: svn://svn.chromium.org/blink/trunk@95906 bbb929c8-8fbe-4397-9dbb-9b2b20218538